--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>LassLos</title>
 </head>
 <body>
-  <h1>Willommen am Ende des Universums</h1>
+  <h1>Willkommen am Ende des Universums</h1>
+  <h2>混沌へようこそ</h2>
 </body>
 </html>
